<resources>
    <string name="app_name">QuizGame</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_registered_sign_in">Already registered? Sign in</string>
    <string name="log_in">Log in</string>
    <string name="already_registered_please_sign_in">Already registered? Please sign in</string>
    <string name="continue_with_google">continue with google</string>
    <string name="not_registered_yet_sign_up">Not registered yet? Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="home">Home</string>
    <string name="play_game">Play game</string>
    <string name="ranking">Ranking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz">QUIZ</string>
    <string name="aboutPage">ABOUT US</string>
    <string name="rankingPage">RANKING</string>
    <string name="share">SHARE</string>
    <string name="take_picture">take picture</string>
    <string name="about_us">About us</string>
</resources>